--- a/index.html
+++ b/index.html
@@ -21,38 +21,40 @@
 
   <nav id="navbar">
     <div class="container">
-      <div class="logo">
-        <a href="#">
-          <img src="./images/logo.png" alt="Bazinger">
-        </a>
-      </div>
-      <div class="menu-list">
-        <ul>
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Feature</a>
-          </li>
-          <li>
-            <a href="#">Gallery</a>
-          </li>
-          <li>
-            <a href="#">Video</a>
-          </li>
-          <li>
-            <a href="#">Prices</a>
-          </li>
-          <li>
-            <a href="#">Testimonials</a>
-          </li>
-          <li>
-            <a href="#">Download</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-      </ul>
+      <div class="row">
+        <div class="logo">
+          <a href="#">
+            <img src="./images/logo.png" alt="Bazinger">
+          </a>
+        </div>
+        <div class="menu-list">
+            <ul>
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">Feature</a>
+              </li>
+              <li>
+                <a href="#">Gallery</a>
+              </li>
+              <li>
+                <a href="#">Video</a>
+              </li>
+              <li>
+                <a href="#">Prices</a>
+              </li>
+              <li>
+                <a href="#">Testimonials</a>
+              </li>
+              <li>
+                <a href="#">Download</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
