banner part new

--- a/index.html
+++ b/index.html
@@ -63,21 +63,23 @@
     <!-- Navbar End -->
     <!-- Banner part start -->
     <section id="banner">
-      <div class="banner-part">
-        <div class="introductory">
-          <h1>
-            Simple, Beautiful <span>and Amazing</span>
-          </h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.
-          </p>
-        </div>
-        <div class="button">
-          <div class="download">
-            <button>Download</button>
+      <div class="container">
+        <div class="banner-part">
+          <div class="introductory">
+            <h1>
+              Simple, Beautiful <span>and Amazing</span>
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.
+            </p>
           </div>
-          <div class="learn-more">
-            <button>Learn more</button>
+          <div class="button">
+            <div class="download">
+              <button>Download</button>
+            </div>
+            <div class="learn-more">
+              <button>Learn more</button>
+            </div>
           </div>
         </div>
       </div>
