--- a/index.html
+++ b/index.html
@@ -1,90 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bazinger</title>
-    <!-- font link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Open+Sans:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Lato:wght@300;700&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bazinger</title>
+  <!-- GOOGLE FONT start -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- GOOGLE FONT end -->
+  
+  <!-- 'MAIN CSS LINK start' -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- 'MAIN CSS LINK end' -->
 
-    <!--  css link start -->
-    <link rel="stylesheet" href="css/style.css">
-    <!--  css link end -->
-
-  </head>
-  <body>
-    <!-- Navbar start -->
-    <nav id="navbar">
-      <div class="container">
-        <div class="row">
-          <div class="logo">
-            <a href="#">
-              <img src="./images/logo.png" alt="Bazinger" />
-            </a>
-          </div>
-          <div class="menu-list">
-            <ul>
-              <li>
-                <a href="#">Home</a>
-              </li>
-              <li>
-                <a href="#">Feature</a>
-              </li>
-              <li>
-                <a href="#">Gallery</a>
-              </li>
-              <li>
-                <a href="#">Video</a>
-              </li>
-              <li>
-                <a href="#">Prices</a>
-              </li>
-              <li>
-                <a href="#">Testimonials</a>
-              </li>
-              <li>
-                <a href="#">Download</a>
-              </li>
-              <li>
-                <a href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+</head>
+<body>
+  <!-- NAVBAR start here -->
+  <nav id="navbar">
+    <div class="container">
+      <div class="row">
+        <div class="logo">
+          <a href="index.html">
+            <img src="images/logo.png" alt="Bazinger">
+          </a>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href=""> home </a></li>
+            <li><a href=""> features </a></li>
+            <li><a href=""> gallary </a></li>
+            <li><a href=""> video </a></li>
+            <li><a href=""> prices </a></li>
+            <li><a href=""> testiomonials </a></li>
+            <li><a href=""> download </a></li>
+            <li><a href=""> contact </a></li>
+          </ul>
         </div>
       </div>
-    </nav>
-    <!-- Navbar End -->
-    <!-- Banner part start -->
-    <section id="banner">
-      <div class="container">
-        <div class="banner-part">
-          <div class="introductory">
-            <h1>
-              Simple, Beautiful <span>and Amazing</span>
-            </h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.
-            </p>
-          </div>
-          <div class="button">
-            <div class="download">
-              <button>Download</button>
-            </div>
-            <div class="learn-more">
-              <button>Learn more</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Banner part end -->
+    </div>
+  </nav>
+  <!-- NAVBAR end here -->
 
-  </body>
+</body>
 </html>
