--- a/index.html
+++ b/index.html
@@ -43,5 +43,30 @@
   </nav>
   <!-- NAVBAR end here -->
 
+  <!-- BANNER part start here -->
+  <section id="banner">
+    <div class="container">
+      <div class="row">
+          <div class="banner_images">
+            <img src="images/iphone.png" alt="iphone">
+          </div>
+          <div class="banner_items">
+            <div class="banner_content">
+              <h1>
+                Simple, Beautiful <span>and Amazing</span>
+              </h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.</p>
+            </div>
+            <div class="button_items">
+              <button class="download"> Download </button>
+              <button class="learn_more"> Learn More </button>
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
+  <!-- BANNER end start here -->
+
+
 </body>
 </html>
