banner added new

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bazinger</title>
-  <!-- GOOGLE FONT start -->
+  <!-- FONTAWESOME link start -->
+  <link rel="stylesheet" href="css/fontawesome.min.css">
+  <!-- FONTAWESOME link end -->
+
+  <!-- GOOGLE FONT link start -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <!-- GOOGLE FONT end -->
+  <!-- GOOGLE FONT link  end -->
   
   <!-- 'MAIN CSS LINK start' -->
   <link rel="stylesheet" href="css/style.css">
@@ -60,6 +64,23 @@
             <div class="button_items">
               <button class="download"> Download </button>
               <button class="learn_more"> Learn More </button>
+            </div>
+            <div class="available">
+              <p>Available on:</p>
+              <div class="icon">
+                <!-- mac icon -->
+              <a href="#">
+                <span>
+                  <i class="fa-brands fa-apple"></i>
+                </span>
+              </a>
+              <!-- andorid icon -->
+              <a href="#">
+                <span>
+                  <i class="fa-brands fa-android"></i>
+                </span>
+              </a>
+              </div>
             </div>
           </div>
       </div>
