--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <body>
   <!-- NAVBAR start here -->
   <nav id="navbar">
-    <div class="container">
-      <div class="row">
-        <div class="logo">
+    <div class="container">    <!-- ****width:1170px, margin: 0 auto;****   -->
+      <div class="row">        <!-- ****display: flex; flex-wrap: wrap;****   -->
+        <div class="logo">           <!-- ****width: 25%;****   -->
           <a href="index.html">
-            <img src="images/logo.png" alt="Bazinger">
+            <img src="images/logo.png" alt="Bazinger">     <!-- ****img--- max-width:100%****   -->
           </a>
         </div>
-        <div class="menu">
-          <ul>
+        <div class="menu">                      <!-- ****width: 75%;****   -->
+          <ul>               <!-- ****list-style-type:none****   -->
             <li><a href=""> home </a></li>
             <li><a href=""> features </a></li>
             <li><a href=""> gallary </a></li>
@@ -62,8 +62,8 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.</p>
             </div>
             <div class="button_items">
-              <button class="download"> Download </button>
-              <button class="learn_more"> Learn More </button>
+              <a href="#" class="download"> Download </a>
+              <a href="#" class="learn_more"> Learn More</a>
             </div>
             <div class="available">
               <p>Available on:</p>
