--- a/index.html
+++ b/index.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bazinger</title>
-  <!-- FONTAWESOME link start -->
-  <link rel="stylesheet" href="css/fontawesome.min.css">
-  <!-- FONTAWESOME link end -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bazinger</title>
+    <!-- FONTAWESOME link start -->
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <!-- FONTAWESOME link end -->
 
-  <!-- GOOGLE FONT link start -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <!-- GOOGLE FONT link  end -->
-  
-  <!-- 'MAIN CSS LINK start' -->
-  <link rel="stylesheet" href="css/style.css">
-  <!-- 'MAIN CSS LINK end' -->
+    <!-- GOOGLE FONT link start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- GOOGLE FONT link  end -->
 
-</head>
-<body>
-  <!-- NAVBAR start here -->
-  <nav id="navbar">
-    <div class="container">    <!-- ****width:1170px, margin: 0 auto;****   -->
-      <div class="row">        <!-- ****display: flex; flex-wrap: wrap;****   -->
-        <div class="logo">           <!-- ****width: 25%;****   -->
-          <a href="index.html">
-            <img src="images/logo.png" alt="Bazinger">     <!-- ****img--- max-width:100%****   -->
-          </a>
-        </div>
-        <div class="menu">                      <!-- ****width: 75%;****   -->
-          <ul>               <!-- ****list-style-type:none****   -->
-            <li><a href=""> home </a></li>
-            <li><a href=""> features </a></li>
-            <li><a href=""> gallary </a></li>
-            <li><a href=""> video </a></li>
-            <li><a href=""> prices </a></li>
-            <li><a href=""> testiomonials </a></li>
-            <li><a href=""> download </a></li>
-            <li><a href=""> contact </a></li>
-          </ul>
+    <!-- 'MAIN CSS LINK start' -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- 'MAIN CSS LINK end' -->
+  </head>
+  <body>
+    <!-- NAVBAR start here -->
+    <nav id="navbar">
+      <div class="container">
+        <!-- ****width:1170px, margin: 0 auto;****   -->
+        <div class="row">
+          <!-- ****display: flex; flex-wrap: wrap;****   -->
+          <div class="logo">
+            <!-- ****width: 25%;****   -->
+            <a href="index.html">
+              <img src="images/logo.png" alt="Bazinger" />
+              <!-- ****img--- max-width:100%****   -->
+            </a>
+          </div>
+          <div class="menu">
+            <!-- ****width: 75%;****   -->
+            <ul>
+              <!-- ****list-style-type:none****   -->
+              <li><a href=""> home </a></li>
+              <li><a href=""> features </a></li>
+              <li><a href=""> gallary </a></li>
+              <li><a href=""> video </a></li>
+              <li><a href=""> prices </a></li>
+              <li><a href=""> testiomonials </a></li>
+              <li><a href=""> download </a></li>
+              <li><a href=""> contact </a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-  <!-- NAVBAR end here -->
+    </nav>
+    <!-- NAVBAR end here -->
 
-  <!-- BANNER part start here -->
-  <section id="banner">
-    <div class="container">
-      <div class="row">
+    <!-- BANNER part start here -->
+    <section id="banner">
+      <div class="container">
+        <div class="row">
           <div class="banner_images">
-            <img src="images/iphone.png" alt="iphone">
+            <img src="images/iphone.png" alt="iphone" />
           </div>
           <div class="banner_items">
             <div class="banner_content">
-              <h1>
-                Simple, Beautiful <span>and Amazing</span>
-              </h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.</p>
+              <h1>Simple, Beautiful <span>and Amazing</span></h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                eget nunc vitae tellus luctus ullamcorper. Nam porttitor
+                ullamcorper felis at convallis. Aenean ornare vestibulum nisi
+                fringilla lacinia. Nullam pulvinar sollicitudin velit id
+                laoreet. Quisque non rhoncus sem.
+              </p>
             </div>
             <div class="button_items">
               <a href="#" class="download"> Download </a>
@@ -69,25 +81,123 @@
               <p>Available on:</p>
               <div class="icon">
                 <!-- mac icon -->
-              <a href="#">
-                <span>
-                  <i class="fa-brands fa-apple"></i>
-                </span>
-              </a>
-              <!-- andorid icon -->
-              <a href="#">
-                <span>
-                  <i class="fa-brands fa-android"></i>
-                </span>
-              </a>
+                <a href="#">
+                    <i class="fa-brands fa-apple"></i>
+                </a>
+                <!-- andorid icon -->
+                <a href="#">
+                    <i class="fa-brands fa-android"></i>
+                </a>
               </div>
             </div>
           </div>
+        </div>
       </div>
-    </div>
-  </section>
-  <!-- BANNER end start here -->
+    </section>
+    <!-- BANNER part end  here -->
 
-
-</body>
+    <!-- FEATURES part start here -->
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="features_heading">
+            <h2>summarise the features</h2>
+            <p>summarise what your product is all about</p>
+          </div>
+          <div class="features_items">
+            <div class="features_details">
+              <div class="features_icon">
+                <a href="#">
+                  <i class="fa-solid fa-layer-group"></i>
+                </a>
+              </div>
+              <div class="features_content">
+                <h3> Attractive Layout </h3>
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="features_details">
+              <div class="features_icon">
+                <a href="#">
+                  <i class="fa-solid fa-mobile-screen"></i>
+                </a>
+              </div>
+              <div class="features_content">
+                <h3> Fresh Design </h3>
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="features_details">
+              <div class="features_icon">
+                <a href="#">
+                  <i class="fa-solid fa-comments"></i>
+                </a>
+              </div>
+              <div class="features_content">
+                <h3> multipurpose </h3>
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="features_details">
+              <div class="features_icon">
+                <a href="#">
+                  <i class="fa-regular fa-message"></i>
+                </a>
+              </div>
+              <div class="features_content">
+                <h3> Easy to customize </h3>
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FEATURES part end here -->
+  </body>
 </html>
+
+
+
+
+
+
+<!-- 
+<div class="features_items">
+  <div class="features_icons">
+    <a href="#">
+      <i class="fa-solid fa-layer-group"></i>
+    </a>
+    <div class="f_content">
+      <h3> Attractive Layout </h3>
+      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+    </div>
+  </div>
+  <div class="features_icons">
+    <a href="#">
+      <i class="fa-solid fa-mobile-screen"></i>
+    </a>
+    <div class="f_content">
+      <h3> Fresh Design </h3>
+      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+    </div>
+  </div>
+  <div class="features_icons">
+    <a href="#">
+      <i class="fa-solid fa-comments"></i>
+    </a>
+    <div class="f_content">
+      <h3> multipurpose </h3>
+      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+    </div>
+  </div>
+  <div class="features_icons">
+    <a href="#">
+      <i class="fa-regular fa-message"></i>
+    </a>
+    <div class="f_content">
+      <h3> Easy to customize </h3>
+      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+    </div>
+  </div>
+</div> -->
