gallery part added

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <!-- ****width: 75%;****   -->
             <ul>
               <!-- ****list-style-type:none****   -->
-              <li><a href=""> home </a></li>
-              <li><a href=""> features </a></li>
-              <li><a href=""> gallary </a></li>
+              <li><a href="index.html"> home </a></li>
+              <li><a href="#features"> features </a></li>
+              <li><a href=""> gallery </a></li>
               <li><a href=""> video </a></li>
               <li><a href=""> prices </a></li>
               <li><a href=""> testiomonials </a></li>
@@ -154,50 +154,54 @@
       </div>
     </section>
     <!-- FEATURES part end here -->
+
+    <!-- GALLERY part start here -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row">
+          <div class="gallery_heading">
+            <h2>show the gallery</h2>
+            <p>summarise what your product is all about</p>
+          </div>
+          <div class="gallery_items">
+            <div class="gallery_details">
+              <div class="gallery_box">
+                <p>SCREEN SHOT #1</p>
+              </div>
+              <div class="gallery_content">
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="gallery_details">
+              <div class="gallery_box">
+                <p>SCREEN SHOT #2</p>
+              </div>
+              <div class="gallery_content">
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="gallery_details">
+              <div class="gallery_box">
+                <p>SCREEN SHOT #3</p>
+              </div>
+              <div class="gallery_content">
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+            <div class="gallery_details">
+              <div class="gallery_box">
+                <p>SCREEN SHOT #4</p>
+              </div>
+              <div class="gallery_content">
+                <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- GALLERY part end here -->
+
   </body>
 </html>
 
-
-
-
-
-
-<!-- 
-<div class="features_items">
-  <div class="features_icons">
-    <a href="#">
-      <i class="fa-solid fa-layer-group"></i>
-    </a>
-    <div class="f_content">
-      <h3> Attractive Layout </h3>
-      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
-    </div>
-  </div>
-  <div class="features_icons">
-    <a href="#">
-      <i class="fa-solid fa-mobile-screen"></i>
-    </a>
-    <div class="f_content">
-      <h3> Fresh Design </h3>
-      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
-    </div>
-  </div>
-  <div class="features_icons">
-    <a href="#">
-      <i class="fa-solid fa-comments"></i>
-    </a>
-    <div class="f_content">
-      <h3> multipurpose </h3>
-      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
-    </div>
-  </div>
-  <div class="features_icons">
-    <a href="#">
-      <i class="fa-regular fa-message"></i>
-    </a>
-    <div class="f_content">
-      <h3> Easy to customize </h3>
-      <p> Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar. </p>
-    </div>
-  </div>
-</div> -->
